Spacing Fix

--- a/ClientApp/src/app/applications/applications.component.scss
+++ b/ClientApp/src/app/applications/applications.component.scss
@@ -1,7 +1,7 @@
 .applications {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
+  justify-content: space-between;
 }
 
 .button {
@@ -20,7 +20,7 @@
 }
 
 .current-app {
-  width: 50%;
+  width: 60%;
 }
 
 td {
